--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ button:hover{
 /* The central right container ---- A navigator window that keeps all the loaded files */
 
 #right_container{
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     flex: 1;
     overflow-y: scroll;
     height: 100vh;
